err/backtrader.err
Listing '.'...
Listing './bin'...
Compiling './bin/bt-run.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backtrader'...
Listing './lib/python3.5/site-packages/backtrader/analyzers'...
Listing './lib/python3.5/site-packages/backtrader/brokers'...
Listing './lib/python3.5/site-packages/backtrader/btrun'...
Listing './lib/python3.5/site-packages/backtrader/commissions'...
Compiling './lib/python3.5/site-packages/backtrader/datacache.py'...
***   File "./lib/python3.5/site-packages/backtrader/datacache.py", line 58
    impor os
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backtrader/feeds'...
Listing './lib/python3.5/site-packages/backtrader/filters'...
Listing './lib/python3.5/site-packages/backtrader/indicators'...
Listing './lib/python3.5/site-packages/backtrader/indicators/contrib'...
Listing './lib/python3.5/site-packages/backtrader/observers'...
Listing './lib/python3.5/site-packages/backtrader/plot'...
Listing './lib/python3.5/site-packages/backtrader/signals'...
Listing './lib/python3.5/site-packages/backtrader/sizers'...
Listing './lib/python3.5/site-packages/backtrader/stores'...
Listing './lib/python3.5/site-packages/backtrader/strategies'...
Listing './lib/python3.5/site-packages/backtrader/studies'...
Listing './lib/python3.5/site-packages/backtrader/studies/contrib'...
Listing './lib/python3.5/site-packages/backtrader/utils'...
Listing './lib/python3.5/site-packages/backtrader-1.9.59.122.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
